symbol_nav/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> math
Rule 1     math -> content
Rule 2     content -> relation
Rule 3     relation -> relation EQUAL relation
Rule 4     relation -> relation LT relation
Rule 5     relation -> relation LTE relation
Rule 6     relation -> relation GT relation
Rule 7     relation -> relation GTE relation
Rule 8     relation -> relation CMD_IN relation
Rule 9     relation -> expr
Rule 10    expr -> additive
Rule 11    additive -> additive ADD additive
Rule 12    additive -> additive SUB additive
Rule 13    additive -> mp
Rule 14    mp -> mp MUL mp
Rule 15    mp -> mp CMD_TIMES mp
Rule 16    mp -> mp DIV mp
Rule 17    mp -> mp CMD_DIV mp
Rule 18    mp -> mp CMD_CDOT mp
Rule 19    mp -> mp COLON mp
Rule 20    mp -> unary
Rule 21    unary -> ADD unary
Rule 22    unary -> SUB unary
Rule 23    unary -> symbol_postfix
Rule 24    symbol_postfix -> format postfix
Rule 25    symbol_postfix -> SYMBOL postfix
Rule 26    postfix -> postfix_op
Rule 27    postfix -> empty
Rule 28    postfix_op -> supscript
Rule 29    postfix_op -> subscript
Rule 30    postfix_op -> supscript subscript
Rule 31    postfix_op -> subscript supscript
Rule 32    supscript -> CARET L_BRACE content R_BRACE
Rule 33    supscript -> CARET format
Rule 34    supscript -> CARET SYMBOL
Rule 35    subscript -> UNDERSCORE L_BRACE content R_BRACE
Rule 36    subscript -> UNDERSCORE format
Rule 37    subscript -> UNDERSCORE SYMBOL
Rule 38    format -> CMD_MATHBF L_BRACE content R_BRACE
Rule 39    format -> CMD_MATHBF SYMBOL
Rule 40    format -> CMD_TEXT L_BRACE text R_BRACE
Rule 41    format -> CMD_TEXT SYMBOL
Rule 42    format -> CMD_MATHBB L_BRACE content R_BRACE
Rule 43    format -> CMD_MATHBB SYMBOL
Rule 44    format -> CMD_MATHIT L_BRACE content R_BRACE
Rule 45    format -> CMD_MATHIT SYMBOL
Rule 46    text -> SYMBOL
Rule 47    text -> TEXT
Rule 48    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 11 21
CARET                : 32 33 34
CMD_CDOT             : 18
CMD_DIV              : 17
CMD_IN               : 8
CMD_MATHBB           : 42 43
CMD_MATHBF           : 38 39
CMD_MATHIT           : 44 45
CMD_TEXT             : 40 41
CMD_TIMES            : 15
COLON                : 19
DIV                  : 16
EQUAL                : 3
GT                   : 6
GTE                  : 7
LT                   : 4
LTE                  : 5
L_BRACE              : 32 35 38 40 42 44
MUL                  : 14
R_BRACE              : 32 35 38 40 42 44
SUB                  : 12 22
SYMBOL               : 25 34 37 39 41 43 45 46
TEXT                 : 47
UNDERSCORE           : 35 36 37
error                : 

Nonterminals, with rules where they appear

additive             : 10 11 11 12 12
content              : 1 32 35 38 42 44
empty                : 27
expr                 : 9
format               : 24 33 36
math                 : 0
mp                   : 13 14 14 15 15 16 16 17 17 18 18 19 19
postfix              : 24 25
postfix_op           : 26
relation             : 2 3 3 4 4 5 5 6 6 7 7 8 8
subscript            : 29 30 31
supscript            : 28 30 31
symbol_postfix       : 23
text                 : 40
unary                : 20 21 22

Parsing method: LALR

state 0

    (0) S' -> . math
    (1) math -> . content
    (2) content -> . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    math                           shift and go to state 1
    content                        shift and go to state 2
    relation                       shift and go to state 3
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 1

    (0) S' -> math .



state 2

    (1) math -> content .

    $end            reduce using rule 1 (math -> content .)


state 3

    (2) content -> relation .
    (3) relation -> relation . EQUAL relation
    (4) relation -> relation . LT relation
    (5) relation -> relation . LTE relation
    (6) relation -> relation . GT relation
    (7) relation -> relation . GTE relation
    (8) relation -> relation . CMD_IN relation

    $end            reduce using rule 2 (content -> relation .)
    R_BRACE         reduce using rule 2 (content -> relation .)
    EQUAL           shift and go to state 17
    LT              shift and go to state 18
    LTE             shift and go to state 19
    GT              shift and go to state 20
    GTE             shift and go to state 21
    CMD_IN          shift and go to state 22


state 4

    (9) relation -> expr .

    EQUAL           reduce using rule 9 (relation -> expr .)
    LT              reduce using rule 9 (relation -> expr .)
    LTE             reduce using rule 9 (relation -> expr .)
    GT              reduce using rule 9 (relation -> expr .)
    GTE             reduce using rule 9 (relation -> expr .)
    CMD_IN          reduce using rule 9 (relation -> expr .)
    $end            reduce using rule 9 (relation -> expr .)
    R_BRACE         reduce using rule 9 (relation -> expr .)


state 5

    (10) expr -> additive .
    (11) additive -> additive . ADD additive
    (12) additive -> additive . SUB additive

    EQUAL           reduce using rule 10 (expr -> additive .)
    LT              reduce using rule 10 (expr -> additive .)
    LTE             reduce using rule 10 (expr -> additive .)
    GT              reduce using rule 10 (expr -> additive .)
    GTE             reduce using rule 10 (expr -> additive .)
    CMD_IN          reduce using rule 10 (expr -> additive .)
    $end            reduce using rule 10 (expr -> additive .)
    R_BRACE         reduce using rule 10 (expr -> additive .)
    ADD             shift and go to state 23
    SUB             shift and go to state 24


state 6

    (21) unary -> ADD . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    unary                          shift and go to state 25
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 7

    (22) unary -> SUB . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    unary                          shift and go to state 26
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 8

    (13) additive -> mp .
    (14) mp -> mp . MUL mp
    (15) mp -> mp . CMD_TIMES mp
    (16) mp -> mp . DIV mp
    (17) mp -> mp . CMD_DIV mp
    (18) mp -> mp . CMD_CDOT mp
    (19) mp -> mp . COLON mp

    ADD             reduce using rule 13 (additive -> mp .)
    SUB             reduce using rule 13 (additive -> mp .)
    EQUAL           reduce using rule 13 (additive -> mp .)
    LT              reduce using rule 13 (additive -> mp .)
    LTE             reduce using rule 13 (additive -> mp .)
    GT              reduce using rule 13 (additive -> mp .)
    GTE             reduce using rule 13 (additive -> mp .)
    CMD_IN          reduce using rule 13 (additive -> mp .)
    $end            reduce using rule 13 (additive -> mp .)
    R_BRACE         reduce using rule 13 (additive -> mp .)
    MUL             shift and go to state 27
    CMD_TIMES       shift and go to state 28
    DIV             shift and go to state 29
    CMD_DIV         shift and go to state 30
    CMD_CDOT        shift and go to state 31
    COLON           shift and go to state 32


state 9

    (20) mp -> unary .

    MUL             reduce using rule 20 (mp -> unary .)
    CMD_TIMES       reduce using rule 20 (mp -> unary .)
    DIV             reduce using rule 20 (mp -> unary .)
    CMD_DIV         reduce using rule 20 (mp -> unary .)
    CMD_CDOT        reduce using rule 20 (mp -> unary .)
    COLON           reduce using rule 20 (mp -> unary .)
    ADD             reduce using rule 20 (mp -> unary .)
    SUB             reduce using rule 20 (mp -> unary .)
    EQUAL           reduce using rule 20 (mp -> unary .)
    LT              reduce using rule 20 (mp -> unary .)
    LTE             reduce using rule 20 (mp -> unary .)
    GT              reduce using rule 20 (mp -> unary .)
    GTE             reduce using rule 20 (mp -> unary .)
    CMD_IN          reduce using rule 20 (mp -> unary .)
    $end            reduce using rule 20 (mp -> unary .)
    R_BRACE         reduce using rule 20 (mp -> unary .)


state 10

    (23) unary -> symbol_postfix .

    MUL             reduce using rule 23 (unary -> symbol_postfix .)
    CMD_TIMES       reduce using rule 23 (unary -> symbol_postfix .)
    DIV             reduce using rule 23 (unary -> symbol_postfix .)
    CMD_DIV         reduce using rule 23 (unary -> symbol_postfix .)
    CMD_CDOT        reduce using rule 23 (unary -> symbol_postfix .)
    COLON           reduce using rule 23 (unary -> symbol_postfix .)
    ADD             reduce using rule 23 (unary -> symbol_postfix .)
    SUB             reduce using rule 23 (unary -> symbol_postfix .)
    EQUAL           reduce using rule 23 (unary -> symbol_postfix .)
    LT              reduce using rule 23 (unary -> symbol_postfix .)
    LTE             reduce using rule 23 (unary -> symbol_postfix .)
    GT              reduce using rule 23 (unary -> symbol_postfix .)
    GTE             reduce using rule 23 (unary -> symbol_postfix .)
    CMD_IN          reduce using rule 23 (unary -> symbol_postfix .)
    $end            reduce using rule 23 (unary -> symbol_postfix .)
    R_BRACE         reduce using rule 23 (unary -> symbol_postfix .)


state 11

    (24) symbol_postfix -> format . postfix
    (26) postfix -> . postfix_op
    (27) postfix -> . empty
    (28) postfix_op -> . supscript
    (29) postfix_op -> . subscript
    (30) postfix_op -> . supscript subscript
    (31) postfix_op -> . subscript supscript
    (48) empty -> .
    (32) supscript -> . CARET L_BRACE content R_BRACE
    (33) supscript -> . CARET format
    (34) supscript -> . CARET SYMBOL
    (35) subscript -> . UNDERSCORE L_BRACE content R_BRACE
    (36) subscript -> . UNDERSCORE format
    (37) subscript -> . UNDERSCORE SYMBOL

    MUL             reduce using rule 48 (empty -> .)
    CMD_TIMES       reduce using rule 48 (empty -> .)
    DIV             reduce using rule 48 (empty -> .)
    CMD_DIV         reduce using rule 48 (empty -> .)
    CMD_CDOT        reduce using rule 48 (empty -> .)
    COLON           reduce using rule 48 (empty -> .)
    ADD             reduce using rule 48 (empty -> .)
    SUB             reduce using rule 48 (empty -> .)
    EQUAL           reduce using rule 48 (empty -> .)
    LT              reduce using rule 48 (empty -> .)
    LTE             reduce using rule 48 (empty -> .)
    GT              reduce using rule 48 (empty -> .)
    GTE             reduce using rule 48 (empty -> .)
    CMD_IN          reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)
    R_BRACE         reduce using rule 48 (empty -> .)
    CARET           shift and go to state 38
    UNDERSCORE      shift and go to state 39

    postfix                        shift and go to state 33
    postfix_op                     shift and go to state 34
    empty                          shift and go to state 35
    supscript                      shift and go to state 36
    subscript                      shift and go to state 37

state 12

    (25) symbol_postfix -> SYMBOL . postfix
    (26) postfix -> . postfix_op
    (27) postfix -> . empty
    (28) postfix_op -> . supscript
    (29) postfix_op -> . subscript
    (30) postfix_op -> . supscript subscript
    (31) postfix_op -> . subscript supscript
    (48) empty -> .
    (32) supscript -> . CARET L_BRACE content R_BRACE
    (33) supscript -> . CARET format
    (34) supscript -> . CARET SYMBOL
    (35) subscript -> . UNDERSCORE L_BRACE content R_BRACE
    (36) subscript -> . UNDERSCORE format
    (37) subscript -> . UNDERSCORE SYMBOL

    MUL             reduce using rule 48 (empty -> .)
    CMD_TIMES       reduce using rule 48 (empty -> .)
    DIV             reduce using rule 48 (empty -> .)
    CMD_DIV         reduce using rule 48 (empty -> .)
    CMD_CDOT        reduce using rule 48 (empty -> .)
    COLON           reduce using rule 48 (empty -> .)
    ADD             reduce using rule 48 (empty -> .)
    SUB             reduce using rule 48 (empty -> .)
    EQUAL           reduce using rule 48 (empty -> .)
    LT              reduce using rule 48 (empty -> .)
    LTE             reduce using rule 48 (empty -> .)
    GT              reduce using rule 48 (empty -> .)
    GTE             reduce using rule 48 (empty -> .)
    CMD_IN          reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)
    R_BRACE         reduce using rule 48 (empty -> .)
    CARET           shift and go to state 38
    UNDERSCORE      shift and go to state 39

    postfix                        shift and go to state 40
    postfix_op                     shift and go to state 34
    empty                          shift and go to state 35
    supscript                      shift and go to state 36
    subscript                      shift and go to state 37

state 13

    (38) format -> CMD_MATHBF . L_BRACE content R_BRACE
    (39) format -> CMD_MATHBF . SYMBOL

    L_BRACE         shift and go to state 41
    SYMBOL          shift and go to state 42


state 14

    (40) format -> CMD_TEXT . L_BRACE text R_BRACE
    (41) format -> CMD_TEXT . SYMBOL

    L_BRACE         shift and go to state 43
    SYMBOL          shift and go to state 44


state 15

    (42) format -> CMD_MATHBB . L_BRACE content R_BRACE
    (43) format -> CMD_MATHBB . SYMBOL

    L_BRACE         shift and go to state 45
    SYMBOL          shift and go to state 46


state 16

    (44) format -> CMD_MATHIT . L_BRACE content R_BRACE
    (45) format -> CMD_MATHIT . SYMBOL

    L_BRACE         shift and go to state 47
    SYMBOL          shift and go to state 48


state 17

    (3) relation -> relation EQUAL . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    relation                       shift and go to state 49
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 18

    (4) relation -> relation LT . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    relation                       shift and go to state 50
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 19

    (5) relation -> relation LTE . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    relation                       shift and go to state 51
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 20

    (6) relation -> relation GT . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    relation                       shift and go to state 52
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 21

    (7) relation -> relation GTE . relation
    (3) relation -> . relation EQUAL relation
    (4) relation -> . relation LT relation
    (5) relation -> . relation LTE relation
    (6) relation -> . relation GT relation
    (7) relation -> . relation GTE relation
    (8) relation -> . relation CMD_IN relation
    (9) relation -> . expr
    (10) expr -> . additive
    (11) additive -> . additive ADD additive
    (12) additive -> . additive SUB additive
    (13) additive -> . mp
    (14) mp -> . mp MUL mp
    (15) mp -> . mp CMD_TIMES mp
    (16) mp -> . mp DIV mp
    (17) mp -> . mp CMD_DIV mp
    (18) mp -> . mp CMD_CDOT mp
    (19) mp -> . mp COLON mp
    (20) mp -> . unary
    (21) unary -> . ADD unary
    (22) unary -> . SUB unary
    (23) unary -> . symbol_postfix
    (24) symbol_postfix -> . format postfix
    (25) symbol_postfix -> . SYMBOL postfix
    (38) format -> . CMD_MATHBF L_BRACE content R_BRACE
    (39) format -> . CMD_MATHBF SYMBOL
    (40) format -> . CMD_TEXT L_BRACE text R_BRACE
    (41) format -> . CMD_TEXT SYMBOL
    (42) format -> . CMD_MATHBB L_BRACE content R_BRACE
    (43) format -> . CMD_MATHBB SYMBOL
    (44) format -> . CMD_MATHIT L_BRACE content R_BRACE
    (45) format -> . CMD_MATHIT SYMBOL

    ADD             shift and go to state 6
    SUB             shift and go to state 7
    SYMBOL          shift and go to state 12
    CMD_MATHBF      shift and go to state 13
    CMD_TEXT        shift and go to state 14
    CMD_MATHBB      shift and go to state 15
    CMD_MATHIT      shift and go to state 16

    relation                       shift and go to state 53
    expr                           shift and go to state 4
    additive                       shift and go to state 5
    mp                             shift and go to state 8
    unary                          shift and go to state 9
    symbol_postfix                 shift and go to state 10
    format                         shift and go to state 11

state 22
